[package]
name = "fontconfig"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = [
    "Austin Bonander <austin.bonander@gmail.com>",
    "Manuel Reinhardt <manuel.jr16@gmail.com>",
    "YesLogic Pty. Ltd. <info@yeslogic.com>",
    "Wanwei Song <sww4718168@163.com>"
]
license = "MIT"

description = "Safe, higher-level wrapper around the fontconfig library"
keywords = ["font", "search", "wrapper", "fontconfig"]
categories = ["text-processing"]

homepage = "https://github.com/songww/fontconfig-rs"
documentation = "https://docs.rs/fontconfig-rs"
repository = "https://github.com/songww/fontconfig-rs"

[dependencies]
const-cstr = "0.3"
thiserror = "1.0"
once_cell = "1.12"

[dependencies.yeslogic-fontconfig-sys]
version = "3.0.0"
git = "https://github.com/yeslogic/fontconfig-rs"

[dev-dependencies]
clap = { version = "3.2", features = ["derive"] }

[features]
dlopen = [ "yeslogic-fontconfig-sys/dlopen" ]
