[package]
name = "yeslogic-fontconfig-sys"
version = "3.0.0"
edition = "2018"
rust-version = "1.46"
authors = [
    "Austin Bonander <austin.bonander@gmail.com>",
    "The Servo Project Developers",
    "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
license = "MIT"

description = "Raw bindings to Fontconfig without a vendored C library"
keywords = ["font", "bindings", "fontconfig", "sys"]
categories = ["text-processing"]

homepage = "https://github.com/yeslogic/fontconfig-rs"
documentation = "https://docs.rs/crate/yeslogic-fontconfig-sys"
repository = "https://github.com/yeslogic/fontconfig-rs"

links = "fontconfig"

[badges]
travis-ci = { repository = "yeslogic/fontconfig-rs" }

[lib]
name = "fontconfig_sys"

[dependencies]
const-cstr = "0.3"
dlib = "0.5.0"
# This cannot be optional because build.rs can't conditionally enable it
# when the RUST_FONTCONFIG_DLOPEN environment variable is set.
lazy_static = "1.4.0"

[features]
dlopen = []

[build-dependencies]
pkg-config = "0.3"
