[package]
name = "fontconfig"
version = "0.5.0"
edition = "2021"
rust-version = "1.56.1"
authors = [
    "Austin Bonander <austin.bonander@gmail.com>",
    "Manuel Reinhardt <manuel.jr16@gmail.com>",
    "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
license = "MIT"

description = "Safe, higher-level wrapper around the Fontconfig library"
keywords = ["font", "search", "wrapper", "fontconfig"]
categories = ["text-processing"]

homepage = "https://github.com/yeslogic/fontconfig-rs"
documentation = "https://docs.rs/crate/fontconfig"
repository = "https://github.com/yeslogic/fontconfig-rs"

[dependencies]
const-cstr = "0.3"
thiserror = "1.0"
once_cell = "1.12"

[dependencies.yeslogic-fontconfig-sys]
version = "3.0.0"
path = "../fontconfig-sys"

[dev-dependencies]
clap = { version = "3.2", features = ["derive"] }

[features]
dlopen = [ "yeslogic-fontconfig-sys/dlopen" ]
