[package]
name = "fontconfig"
version = "0.7.0"
edition = "2018"
rust-version = "1.64"
authors = [
    "Austin Bonander <austin.bonander@gmail.com>",
    "Manuel Reinhardt <manuel.jr16@gmail.com>",
    "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
license = "MIT"

description = "Safe, higher-level wrapper around the Fontconfig library"
keywords = ["font", "search", "wrapper", "fontconfig"]
categories = ["text-processing"]

homepage = "https://github.com/yeslogic/fontconfig-rs"
documentation = "https://docs.rs/crate/fontconfig"
repository = "https://github.com/yeslogic/fontconfig-rs"

[dependencies.yeslogic-fontconfig-sys]
version = "5.0.0"
path = "../fontconfig-sys"

[features]
dlopen = [ "yeslogic-fontconfig-sys/dlopen" ]
